Finish CSV export and add /openapi endpoint
